# horde-exporters

./: README.md  pyproject.toml
.github/workflows/: release.yml  version-policy.yml
ai_horde_stats_exporter/: ai_horde_stats_exporter.py  exporter_config.yaml  pyproject.toml
ai_horde_stats_exporter/dashboards/: horde-image-models-overview.json  horde-image-worker-detail.json  horde-image-workers-overview.json  horde-models.json  horde-performance.json  horde-text-model-detail.json  horde-text-worker-detail.json  horde-text-workers-overview.json
dashboards/ai_horde_otlp/: horde-app-traces.json  horde-operations-overview.json  horde-performance.json
dashboards/node_exporter/: node_exporter_full.json
dashboards/pm2/: pm2.json
dashboards/postgres/: postgres.json
scripts/: check_version_policy.py  convert_grafana_v2_to_classic.py
